<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Stage"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtStage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Status"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Satellites"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtSatellites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Latitude"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Longitude"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Altitude"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Speed"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Accuracy"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtAccuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Time"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Activity"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/TrackName"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtTrackName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/Version"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" >
            </TextView>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:paddingTop="5dip" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:state_enabled="true"
                android:text="@string/Start"
                android:width="100dip" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:state_enabled="false"
                android:text="@string/Stop"
                android:width="100dip" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:state_enabled="false"
                android:text="@string/Update"
                android:width="100dip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnWaypoint"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:state_enabled="true"
                android:text="@string/Waypoint"
                android:width="100dip" />

            <Button
                android:id="@+id/btnGeocode"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:state_enabled="true"
                android:text="@string/Geocode"
                android:width="100dip" />

            <ImageView
                android:id="@+id/iconActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon" >
            </ImageView>
        </TableRow>
    </TableLayout>

</LinearLayout>